<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".groceryinfoActivity">


    <TextView
        android:id="@+id/grocerytext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/groceryinfo"
        android:textSize="35sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <View
        android:id="@+id/dividergroceryinfo"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@+id/grocerytext2"
        android:background="?android:attr/listDivider"
        />

   <LinearLayout
       android:id="@+id/linearlayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/dividergroceryinfo"
       android:orientation="horizontal"
       android:layout_marginTop="20dp"
       android:weightSum="6"
       >

       <TextView
           android:id="@+id/groceryinfoname"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="30sp"
           android:text="@string/groceryname"
           android:textStyle="bold"
           android:textColor="#000000"
           android:layout_gravity="center"
           android:layout_marginLeft="20dp"
           android:layout_marginStart="20dp"
           android:layout_weight="3"/>

       <Button
           android:id="@+id/dateButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/putrefri"
           android:layout_gravity="center"
           android:layout_weight="1"
           >
       </Button>

       <Button
           android:id="@+id/cartButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/putcart"
           android:layout_weight="1"
           >
       </Button>
   </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/linearlayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keeptime"
                android:textSize="30sp"
                android:background="#FFE08C"
                android:textColor="#000000"
                android:layout_marginTop="10sp"
                android:paddingLeft="20dp"
                />
            <TextView
                android:id="@+id/expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="보관기간불러오기"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/season"
                android:textSize="30sp"
                android:layout_marginTop="10sp"
                android:background="#FFE08C"
                android:textColor="#000000"
                android:paddingLeft="20dp"
                />
            <TextView
                android:id="@+id/season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="제철불러오기"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchasetip"
                android:textSize="30sp"
                android:background="#FFE08C"
                android:textColor="#000000"
                android:layout_marginTop="10sp"
                android:paddingLeft="20dp"
                />
            <TextView
                android:id="@+id/tipPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="구입요령불러오기"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maketip"
                android:textSize="30sp"
                android:layout_marginTop="10sp"
                android:background="#FFE08C"
                android:textColor="#000000"
                android:paddingLeft="20dp"
                />
            <TextView
                android:id="@+id/tipCook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="조리방법불러오기"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keepmeth"
                android:textSize="30sp"
                android:layout_marginTop="10sp"
                android:background="#FFE08C"
                android:textColor="#000000"
                android:paddingLeft="20dp"
                />
            <TextView
                android:id="@+id/tipStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="보관법불러오기"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />




        </LinearLayout>

    </ScrollView>


    <ImageButton
        android:id="@+id/imageButtonback_groinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toTopOf="@id/dividergroceryinfo"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginEnd="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>