<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupActivity">

    <TextView
        android:id="@+id/signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/signup"
        android:textSize="35sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/dividersignup"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/signuptext"
        tools:layout_editor_absoluteY="73dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dosignup"
        android:textColor="#000000"
        android:background="#FFE08C"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dividersignup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginEnd="15sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/dividersignup"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="vertical"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="15sp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" *은 필수로 입력해주세요."
                android:textSize="15sp"
                android:layout_marginBottom="5sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="30sp"
                android:background="#FFE08C"
                android:textColor="#000000"
                android:layout_marginBottom="10sp"/>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editemail_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:background="@drawable/border"
                android:inputType="textEmailAddress"
                android:textSize="25sp"
                android:layout_marginBottom="5sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="30sp"
                android:background="#FFE08C"
                android:textColor="#000000"
                android:layout_marginBottom="10sp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editpassword_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="10"
                android:textSize="25sp"
                android:inputType="textPassword"
                android:layout_marginBottom="5sp"
                android:hint="@string/password"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8자이상 16자미만의 비밀번호를 입력하세요"
                android:textSize="15sp"
                android:layout_marginBottom="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/passwordcheck"
                android:textSize="30sp"
                android:background="#FFE08C"
                android:textColor="#000000"
                android:layout_marginBottom="10sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editpassword2_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="10"
                android:textSize="25sp"
                android:inputType="textPassword"
                android:layout_marginBottom="5sp"
                android:hint="@string/password"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textSize="30sp"
                android:background="#FFE08C"
                android:textColor="#000000"
                android:layout_marginBottom="10sp"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editnickname_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:background="@drawable/border"
            android:textSize="25sp"
            android:layout_marginBottom="5sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="30sp"
                android:background="#FFE08C"
                android:textColor="#000000"
                android:layout_marginBottom="10sp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editname_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="25sp"
                android:background="@drawable/border"
                android:layout_marginBottom="5sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/member"
                android:textSize="30sp"
                android:background="#FFE08C"
                android:textColor="#000000"
                android:layout_marginBottom="10sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editmemnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="구성원 수"
                android:textSize="25sp"
                android:background="@drawable/border"
                android:ems="10"
                android:inputType="number" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>