<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".loginActivity"
    tools:deviceIds="wear">

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginTop="30sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logintext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:layout_marginRight="50sp"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="50sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ID"
            android:textSize="30sp"
            android:layout_marginBottom="15sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ID"
            android:ems="10"
            android:textSize="30sp"
            android:layout_marginBottom="30sp"
            android:background="@drawable/border"
            android:inputType="textEmailAddress"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PASSWORD"
            android:textSize="30sp"
            android:layout_marginBottom="15sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="30sp"
            android:hint="@string/PASSWORD"
            android:background="@drawable/border"
            android:layout_marginBottom="20sp"/>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alwayslogin"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="25sp"
            android:layout_marginBottom="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="회원이 아니시라면?"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            />

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="25sp"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>