<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountset">

    <TextView
        android:id="@+id/myaccounttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/account"
        android:textSize="35sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="12dp" />

    <View
        android:id="@+id/divideraccountset"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/myaccounttext"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/accountpic"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="72dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divideraccountset"
        tools:ignore="MissingConstraints"
        android:src="@drawable/ic_baseline_face_24"
        android:layout_marginStart="25dp" />

    <Button
        android:id="@+id/buttontoend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="@+id/divideraccountset"
        android:layout_marginTop="10dp"
        android:text="@string/endaccount"
        android:textSize="15sp"
        android:background="#FFE08C"

        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/editnickname"
        android:layout_width="180sp"
        android:layout_height="41dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/accountpic"
        app:layout_constraintTop_toBottomOf="@+id/divideraccountset"
        android:layout_marginTop="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/textViewgrocery"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/grocerypick"
        android:textSize="20sp"
        android:background="#FFE08C"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/accountpic"
        android:layout_marginTop="10sp"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/textviewnickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/nickname"
        android:textSize="20sp"
        android:background="#FFE08C"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/editnickname"
        app:layout_constraintLeft_toRightOf="@+id/accountpic"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="25sp"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="25sp" />

    <Spinner
        android:id="@+id/spinner"
        android:entries="@array/구성원수"
        android:layout_width="75sp"
        android:layout_height="36dp"
        android:background="@drawable/border"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editnickname"
        android:layout_marginTop="15dp"
        tools:ignore="MissingConstraints"
        android:layout_marginEnd="30dp" />

    <TextView
        android:id="@+id/textviewmany"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/member"
        android:textSize="20sp"
        android:textColor="#000000"
        android:background="#FFE08C"
        app:layout_constraintTop_toBottomOf="@+id/editnickname"
        app:layout_constraintRight_toLeftOf="@id/spinner"
        app:layout_constraintLeft_toRightOf="@id/accountpic"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25sp" />

    <ImageView
        android:id="@+id/settingicon"
        android:layout_width="54dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toTopOf="@+id/divideraccountset"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        tools:layout_editor_absoluteY="10dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textviewrecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipecount"
        android:textSize="20sp"
        android:background="#FFE08C"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/textViewgrocery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"

        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/textViewreply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commentcount"
        android:textSize="20sp"
        android:background="#FFE08C"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewgrocery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="MissingConstraints"
        />

</androidx.constraintlayout.widget.ConstraintLayout>